dxscale/core/serviceBase/objects/Service_Implementation__mdt/Service_Implementation__mdt.object-meta.xml
<CustomObject>
    <description>Configures the correct implementation of a Service / Service Method by providing a concrete Apex class or Flow to provide the implementation</description>
    <label>Service Implementation</label>
    <pluralLabel>Service Implementations</pluralLabel>
</CustomObject>