dxscale/core/serviceBase/objects/Service_Implementation__mdt/fields/Implementation_Type__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Type__c</fullName>
    <description>States how which technology provides the implementation</description>
    <inlineHelpText>States how which technology provides the implementation</inlineHelpText>
    <label>Implementation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ApexClass</fullName>
                <default>true</default>
                <label>ApexClass</label>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>RemoteInvocation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>