dxscale/core/serviceBase/objects/Service_Implementation__mdt/fields/Implementing_Class__c.field-meta.xml
<CustomField>
    <fullName>Implementing_Class__c</fullName>
    <description>Class that implements the service for implementation with Implementation Type "ApexClass"</description>
    <inlineHelpText>Class that implements the service for implementation with Implementation Type "ApexClass"</inlineHelpText>
    <label>Implementing Class</label>
    <length>80</length>
    <type>Text</type>
</CustomField>