dxscale/core/serviceBase/objects/Service_Implementation__mdt/fields/Implementing_Flow__c.field-meta.xml
<CustomField>
    <fullName>Implementing_Flow__c</fullName>
    <description>Name of the implementing flow</description>
    <inlineHelpText>Name of the implementing flow</inlineHelpText>
    <label>Implementing Flow</label>
    <length>80</length>
    <type>Text</type>
</CustomField>