dxscale/core/serviceBase/objects/Service_Implementation__mdt/fields/Output_Creation_Class__c.field-meta.xml
<CustomField>
    <fullName>Output_Creation_Class__c</fullName>
    <description>The class used to implement the Output Interface Version. This is optional for Apex Implementations but mandatory for Flow Implementations (in which case it must implement IService_Flow_Output)</description>
    <inlineHelpText>The class used to implement the Output Interface Version. This is optional for Apex Implementations but mandatory for Flow Implementations (in which case it must implement IService_Flow_Output)</inlineHelpText>
    <label>Output Creation Class</label>
    <length>80</length>
    <type>Text</type>
</CustomField>