dxscale/core/serviceBase/objects/Service_Implementation__mdt/validationRules/Apex_Class_is_provided_for_Apex_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Apex_Class_is_provided_for_Apex_Type</fullName>
    <active>true</active>
    <errorConditionFormula>IF(  ISPICKVAL(Implementation_Type__c, &apos;ApexClass&apos;), 
 ISBLANK( Implementing_Class__c ) , false
)</errorConditionFormula>
    <errorMessage>Implementation type of ApexClass requires the Implementing Class field to be filled</errorMessage>
</ValidationRule>