dxscale/core/serviceBase/objects/Service_Implementation__mdt/validationRules/Flow_name_is_provided_for_Flow_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Flow_name_is_provided_for_Flow_Type</fullName>
    <active>true</active>
    <errorConditionFormula>IF(  ISPICKVAL(Implementation_Type__c, &apos;Flow&apos;), 
 ISBLANK( Implementing_Flow__c ) , false
)</errorConditionFormula>
    <errorMessage>Implementation type of Flow requires the Implementing Flow field to be filled</errorMessage>
</ValidationRule>